# snake-pipe

./: .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  DEVELOPMENT.md  ProjectDetails.md  README.md  TASK-001-COMPLETE.md  TASK-002-IMPLEMENTATION-SUMMARY.md  cspell.json  demo_task001.py  main.py  package.json  pyproject.toml  snake-pipe.code-workspace  test-config.json
.github/instructions/: coding guidelines.instructions.md
.github/prompts/: ba-pm.prompt.md  implementer.prompt.md  taskmaker.prompt.md
ast_output/Daily/src/: d2.json  database.json  employee.json  main.json  main2.json  phoneCall.json  phonecallTicket.json  pnlAdmin.json  test.json  viewTicket.json
config/: pipeline.json
docs/tasks/: EPIC-001-ast-extract-phase.md  EPIC-002-ast-transform-phase.md  EPIC-003-multi-database-load.md  EPIC-004-configuration-plugin-system.md  EPIC-005-monitoring-operational-excellence.md  TASK-001-ast-file-discovery.md  TASK-002-realtime-file-watcher.md  TASK-003-batch-processing-engine.md  TASK-004-file-integrity-validation.md  TASK-005-schema-validation-engine.md  TASK-006-multi-language-normalization.md  TASK-007-cross-file-relationships.md  TASK-008-deduplication-conflict-resolution.md  TASK-009-error-handling-quarantine-system.md  TASK-010-backend-plugin-architecture.md  TASK-011-nebulagraph-backend-implementation.md  TASK-012-postgresql-backend-implementation.md  TASK-013-vector-database-backend-implementation.md  TASK-014-elasticsearch-backend-implementation.md  TASK-LIST.md
examples/: batch_processing_examples.py
scripts/: run_pipeline.py  sample_data.csv
snake_pipe/: __init__.py  pipeline.py
snake_pipe/cli/: __init__.py  batch_cli.py
snake_pipe/config/: __init__.py  extract_config.py  settings.py  watcher_settings.py
snake_pipe/extract/: __init__.py  api_extractor.py  ast_extractor.py  batch_config.py  batch_models.py  batch_processor.py  batch_worker.py  csv_extractor.py  db_extractor.py  event_debouncer.py  event_processor.py  file_watcher.py  models.py
snake_pipe/load/: __init__.py  db_loader.py  file_loader.py  warehouse_loader.py
snake_pipe/transform/: __init__.py  cleaners.py  enrichers.py  validators.py
snake_pipe/utils/: __init__.py  checkpoint_manager.py  file_monitor.py  file_utils.py  helpers.py  logger.py
tests/: __init__.py  test_batch_processing.py  test_pipeline.py
tests/integration/: test_task_002_basic_validation.py  test_task_002_validation.py
tests/integration/extract/: test_file_discovery.py
tests/tasks/: test_task001_verification.py
tests/unit/extract/: test_ast_extractor.py  test_event_debouncer.py  test_event_processor.py  test_file_watcher.py
